# graduaciones

./: .gitignore  CODEOWNERS  README.md  auto-imports.d.ts  components.d.ts  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
src/: App.vue  main.ts  ports.ts  schema.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  scanner.rs  session.rs  store.rs  ticket.rs
src-tauri/src/ticket/: csv.rs  data.rs  email.rs  gen.rs  mod.rs
src/pages/: event.vue  index.vue  scanner.vue
src/pages/[id]/: index.vue  scan.vue  send.vue
src/stores/: eventStore.ts
