[package]
name = "graduaciones"
version = "0.0.0"
description = "Graduaciones"
authors = ["ComicIvans", "HipyCas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = { version = "4.3.0", features = ["serde"] }
home = "0.5.9"
cuid2 = "0.1.2"
qrcode = "0.14.0"
image = "0.25.1"
pdf = "0.9.0"
ecb = { version = "0.1.2", features = ["std"] }
aes = "0.8.4"
base64 = "0.22.1"
lopdf = { version = "0.32.0", features = ["image", "embed_image"] }
log = "0.4.21"
env_logger = "0.11.3"
fern = "0.6.2"
lettre = "0.11.7"
serde_repr = "0.1.19"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
